--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/app.js",
   "scripts": {
-    "start": "node --env-file=.env src/lib/getRoutes.js"
+    "start": "node --env-file=.env src/app.js"
   },
   "keywords": [],
   "author": "",
